<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context=".EditListActivity"
    >
  <EditText
      android:id="@+id/editor"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_margin="16dip"
      android:gravity="top|start"
      tools:text="@string/hello"
      />
  <LinearLayout
      android:id="@+id/text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="20dip"
      android:orientation="horizontal"
      >
    <Button
        android:id="@+id/savebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="80dp"
        android:text="@string/save"
        android:textColor="@android:color/black"
        />
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:gravity="center_vertical"
        android:text="@string/or"
        />
    <TextView
        android:id="@+id/cancellink"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minWidth="80dp"
        android:text="@string/cancel"
        android:textColor="@color/linkbutton"
        />
  </LinearLayout>
</LinearLayout>