<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@android:color/white"
	android:isScrollContainer="true"
	android:layout_gravity="center">
	<TextView
		android:id="@+id/editlist"
		android:text="@string/edit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		android:textColor="@color/linkbutton"
		android:padding="20dip"
		android:layout_gravity="center_horizontal"
		android:clickable="true"
		android:focusable="true"/>
	<Button
		android:id="@+id/donebutton"
		android:text="@string/done"
		android:layout_width="wrap_content"
		android:textColor="@android:color/black"
		android:layout_centerHorizontal="true"
		android:layout_height="wrap_content"
		android:paddingRight="15dip"
		android:paddingLeft="16dip"
		android:layout_gravity="center_horizontal"
		android:layout_above="@id/editlist"/>
	<TextView
		android:id="@+id/itemtext"
		android:text="@string/hello"
		android:layout_width="fill_parent"
		android:textColor="@android:color/black"
		android:textSize="36dip"
		android:textStyle="bold"
		android:layout_margin="16dip"
		android:layout_gravity="center_horizontal"
		android:layout_height="fill_parent"
		android:layout_above="@id/donebutton"
		android:lines="4"
		android:gravity="center"/>
</RelativeLayout>